logs/products.qrss2syndication.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/qRSS2Syndication'...
Listing './lib/python3.5/site-packages/Products/qRSS2Syndication/Extensions'...
Listing './lib/python3.5/site-packages/Products/qRSS2Syndication/skins'...
Listing './lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication'...
Compiling './lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getFileFieldContentType.py'...
***   File "./lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getFileFieldContentType.py", line 11
    return None
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getItemMacros.py'...
***   File "./lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getItemMacros.py", line 14
    return template.macros['item']
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getObjectCreator.py'...
***   File "./lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getObjectCreator.py", line 17
    return res
             ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getSynProp.py'...
***   File "./lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getSynProp.py", line 12
    return res
             ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getSyndicatableContent.py'...
***   File "./lib/python3.5/site-packages/Products/qRSS2Syndication/skins/qrss2syndication/getSyndicatableContent.py", line 22
    return res
             ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products.qRSS2Syndication-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
